--- a/.github/workflows/gitlab-mirror.yml
+++ b/.github/workflows/gitlab-mirror.yml
@@ -22,4 +22,6 @@ jobs:
           git config --global user.name "GitHub CI Bot"
 
           git remote add gitlab https://oauth2:${{ secrets.GITLAB_TOKEN }}@gitlab.com/elion628/food-webapp
-          git push --mirror gitlab
+          git push gitlab --all
+          git push gitlab --tags
+
