--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ build_ml:
   stage: build
   image: docker:20.10.7 
   script:
-    - docker build -t my_ml_service .
+    - docker build -t ml_service/my_ml_service .
 
 # Run tests using pytest
 test_ml:
