--- a/ml_service/Dockerfile
+++ b/ml_service/Dockerfile
@@ -7,13 +7,13 @@ WORKDIR /app
 # Copy the current directory contents into the container at /app
 COPY . /app
 
-# Install system dependencies (if needed)
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    libssl-dev \
-    libffi-dev \
-    python3-dev \
-    && rm -rf /var/lib/apt/lists/*
+# # Install system dependencies (if needed)
+# RUN apt-get update && apt-get install -y \
+#     build-essential \
+#     libssl-dev \
+#     libffi-dev \
+#     python3-dev \
+#     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies from requirements.txt
 RUN pip install --upgrade pip
