--- a/ml_service/Dockerfile
+++ b/ml_service/Dockerfile
@@ -16,7 +16,7 @@ COPY . /app
 #     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies from requirements.txt
-RUN pip install --upgrade pip
+# RUN pip install --upgrade pip
 COPY requirements.txt /app/requirements.txt
 RUN pip install -r requirements.txt
 
