--- a/ml_service/Dockerfile
+++ b/ml_service/Dockerfile
@@ -4,8 +4,8 @@ FROM python:3.12-slim
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . /app
+# Copy the contents of the ml_service directory into the container at /app
+COPY ml_service/ /app/
 
 # # Install system dependencies (if needed)
 # RUN apt-get update && apt-get install -y \
@@ -16,12 +16,12 @@ COPY . /app
 #     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies from requirements.txt
+COPY ml_service/requirements.txt /app/requirements.txt
 # RUN pip install --upgrade pip
-COPY requirements.txt /app/requirements.txt
-RUN pip install -r requirements.txt
+RUN pip install -r /app/requirements.txt
 
 # Expose the port the app will run on
 EXPOSE 8000
 
-# Command to run the application (adjust as needed)
+# Command to run the application
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
