--- a/ml_service/Dockerfile
+++ b/ml_service/Dockerfile
@@ -7,14 +7,10 @@ WORKDIR /app
 # Copy the contents of the ml_service directory into the container at /app
 COPY ml_service/ /app/
 
-# Install system dependencies (if needed)
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    libssl-dev \
-    libffi-dev \
-    python3-dev \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends build-essential libssl-dev libffi-dev python3-dev && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* || true
 
 # Install Python dependencies from requirements.txt
 COPY ml_service/requirements.txt /app/requirements.txt
