--- a/ml_service/requirements.txt
+++ b/ml_service/requirements.txt
@@ -5,7 +5,7 @@ scikit-learn==1.6.1
 imblearn==0.0
 pandas==2.2.3
 numpy==1.26.4
-matplotlib==3.7.1
+# matplotlib==3.7.1
 pydantic==2.8.2
 pytest==7.4.4
 httpx==0.27.0
