--- a/ml_service/Dockerfile
+++ b/ml_service/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a base image
-FROM python:3.12-alpine
+FROM python:3.12
 
 # Set the working directory inside the container
 WORKDIR /app
