--- a/ml_service/Dockerfile
+++ b/ml_service/Dockerfile
@@ -1,10 +1,10 @@
 # Use an official Python runtime as a base image
-FROM python:3.12
+FROM python:3.12-slim
 
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy the contents of the ml_service directory into the container at /app
+# Copy the current directory contents into the container at /app
 COPY ml_service/ /app/
 
 RUN apt-get update && \
@@ -12,13 +12,13 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* || true
 
-# Install Python dependencies from requirements.txt
-COPY ml_service/requirements.txt /app/requirements.txt
 
-RUN pip install --no-cache-dir -r /app/requirements.txt  # Add --no-cache-dir to prevent pip from caching packages
+# Install Python dependencies from requirements.txt
+COPY requirements.txt /app/requirements.txt
+RUN pip install -r requirements.txt
 
 # Expose the port the app will run on
 EXPOSE 8000
 
-# Command to run the application
+# Command to run the application (adjust as needed)
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
