--- a/ml_service/Dockerfile
+++ b/ml_service/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a base image
-FROM python:3.11-slim
+FROM python:3.12-slim
 
 # Set the working directory inside the container
 WORKDIR /app
@@ -15,7 +15,8 @@ RUN apt-get update && \
 
 # Install Python dependencies from requirements.txt
 COPY ml_service/requirements.txt /app/requirements.txt
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir --disable-pip-version-check --no-use-pep517 -r /app/requirements.txt
+
 
 # Expose the port the app will run on
 EXPOSE 8000
