--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,9 @@ build_ml:
     - docker:20.10.7-dind
   script:
     - docker build -t my_ml_service -f ml_service/Dockerfile .
+  tags:
+    - docker
+    - custom
 
 # Run tests using pytest
 test_ml:
