--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,8 @@ build_ml:
   image: docker:20.10.7 
   services:
     - docker:20.10.7-dind
+  variables:
+    DOCKER_HOST: tcp://docker:2375
   script:
     - docker build -t my_ml_service -f ml_service/Dockerfile .
   tags:
