--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,10 +6,10 @@ stages:
 build_ml:
   stage: build
   image: docker:20.10.7 
-  services:
-    - docker:20.10.7-dind
-  variables:
-    DOCKER_HOST: tcp://docker:2375
+  # services:
+  #   - docker:20.10.7-dind
+  # variables:
+  #   DOCKER_HOST: tcp://docker:2375
   script:
     - docker build -t my_ml_service -f ml_service/Dockerfile .
   tags:
