--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,9 @@ build_ml:
 # Run tests using pytest
 test_ml:
   stage: test
-  image: python:3.12-slim
+  image: my_ml_service
   script:
-    - pip install pytest httpx 
+    # - pip install pytest httpx 
     - pytest > result.log; tail -n 10 result.log
+  tags:
+    - docker
