--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,20 +6,26 @@ stages:
 build_ml:
   stage: build
   image: docker:20.10.7
+  services:
+    - docker:20.10.7-dind
+  variables:
+    DOCKER_HOST: "tcp://docker:2375"
   script:
+    # Build the image
     - docker build -t my_ml_service -f ml_service/Dockerfile .
   tags:
     - docker
 
-# Run tests using pytest inside the built Docker image
+# Run tests using the built image
 test_ml:
   stage: test
-  image: docker:20.10.7  # Use the same Docker image for the job as build
+  image: docker:20.10.7
   services:
-    - docker:20.10.7-dind  # Enable Docker-in-Docker to access the built image
+    - docker:20.10.7-dind
   variables:
-    DOCKER_HOST: tcp://docker:2375  # Make the Docker daemon accessible
+    DOCKER_HOST: "tcp://docker:2375"
   script:
-    - docker run --rm my_ml_service pytest > result.log; tail -n 10 result.log  # Run tests and show the last 10 lines of the log
-  # tags:
-  #   - docker
+    # Run tests using the locally built image
+    - docker run --rm my_ml_service pytest > result.log; tail -n 10 result.log
+  tags:
+    - docker
