--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,30 +2,32 @@ stages:
   - build
   - test
 
-# Build the Docker image
+# Build the Docker image and push to GitLab Container Registry
 build_ml:
   stage: build
   image: docker:20.10.7
   services:
     - docker:20.10.7-dind
-  variables:
-    DOCKER_HOST: "tcp://docker:2375"
   script:
+    # Log in to GitLab container registry
+    - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
     # Build the image
-    - docker build -t my_ml_service -f ml_service/Dockerfile .
+    - docker build -t $CI_REGISTRY/my_ml_service .
+    # Push the image to the registry
+    - docker push $CI_REGISTRY/my_ml_service
   tags:
     - docker
 
-# Run tests using the built image
+# Run tests using the image pulled from GitLab Container Registry
 test_ml:
   stage: test
   image: docker:20.10.7
-  services:
-    - docker:20.10.7-dind
-  variables:
-    DOCKER_HOST: "tcp://docker:2375"
   script:
-    # Run tests using the locally built image
-    - docker run --rm my_ml_service pytest > result.log; tail -n 10 result.log
+    # Log in to GitLab container registry
+    - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
+    # Pull the image from the registry
+    - docker pull $CI_REGISTRY/my_ml_service
+    # Run tests using the pulled image
+    - docker run --rm $CI_REGISTRY/my_ml_service pytest > result.log; tail -n 10 result.log
   tags:
     - docker
