--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,8 +21,11 @@ test_ml:
   services:
     - docker:20.10.7-dind
   variables:
-    DOCKER_HOST: "tcp://docker:2375"  # Ensures Docker connects to the right daemon
+    DOCKER_HOST: "tcp://docker:2375"
   script:
+    # Wait for Docker daemon to be up
+    - echo "Waiting for Docker to start..."
+    - until docker info; do echo "Waiting for Docker to be ready..."; sleep 2; done
     # Run tests using the locally built image
     - docker run --rm my_ml_service pytest > result.log; tail -n 10 result.log
   tags:
