--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,25 +9,25 @@ build_ml:
   services:
     - docker:20.10.7-dind
   script:
-    # Build the image
     - docker build -t my_ml_service -f ml_service/Dockerfile .
+    - docker save my_ml_service -o my_ml_service.tar  # Save the image to a tarball
+  artifacts:
+    paths:
+      - my_ml_service.tar  # Pass the image tarball as an artifact
+    expire_in: 1 hour      # Optionally, set expiration for the artifact
   tags:
     - docker
 
-# Run tests using the built image
+# Run tests using the saved Docker image
 test_ml:
   stage: test
   image: docker:20.10.7
   services:
     - docker:20.10.7-dind
-  variables:
-    DOCKER_HOST: "tcp://docker:2375"
+  dependencies:
+    - build_ml  # Ensure that the test stage depends on the build stage
   script:
-    # Wait for Docker daemon to be up
-    - echo "Waiting for Docker to start..."
-    - until docker info; do echo "Waiting for Docker to be ready..."; sleep 2; done
-    # Run tests using the locally built image
+    - docker load -i my_ml_service.tar  # Load the Docker image from the tarball
     - docker run --rm my_ml_service pytest > result.log; tail -n 10 result.log
   tags:
     - docker
-
