--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,32 +2,27 @@ stages:
   - build
   - test
 
-# Build the Docker image
-build_ml:
-  stage: build
-  image: docker:20.10.7
-  services:
-    - docker:20.10.7-dind
-  script:
-    - docker build -t my_ml_service -f ml_service/Dockerfile .
-    - docker save my_ml_service -o my_ml_service.tar  # Save the image to a tarball
-  artifacts:
-    paths:
-      - my_ml_service.tar  # Pass the image tarball as an artifact
-    expire_in: 1 hour      # Optionally, set expiration for the artifact
-  tags:
-    - docker
+variables:
+  DOCKER_DRIVER: overlay2
 
-# Run tests using the saved Docker image
-test_ml:
-  stage: test
-  image: docker:20.10.7
-  services:
-    - docker:20.10.7-dind
-  dependencies:
-    - build_ml  # Ensure that the test stage depends on the build stage
+services:
+  - docker:dind
+
+before_script:
+  - apk add --no-cache docker-cli curl
+  - docker info
+
+build-ml-service:
+  stage: build
   script:
-    - docker load -i my_ml_service.tar  # Load the Docker image from the tarball
-    - docker run --rm my_ml_service pytest > result.log; tail -n 10 result.log
-  tags:
-    - docker
+    - docker build -t ml-service ./ml-service
+
+test-ml-service:
+  stage: test
+  script:
+    - docker run -d -p 8000:8000 --name ml-test ml-service
+    - sleep 10  # give it time to start
+    - |
+      # Example test - update with real API endpoints
+      curl --fail http://localhost:8000/health || (echo "API test failed" && exit 1)
+    - docker stop ml-test
