--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ services:
   - docker:dind
 
 before_script:
-  - apk add --no-cache docker-cli curl
+  - apt-get update && apt-get install -y docker.io curl
   - docker info
 
 build-ml-service:
