dockerfile ml_Service updated v31

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build-ml-service:
   image: docker:latest
   stage: build
   script:
-    - docker build -t ml-service -f ml_Service/Dockerfile .
+    - docker build -t ml-service -f ml_service/Dockerfile .
 
 
 test-ml-service:
