--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ build-ml-service:
   stage: build
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $IMAGE_TAG ./ml-service -f ml_service/Dockerfile .
+    - docker build -t $IMAGE_TAG -f ml_service/Dockerfile .
     - docker push $IMAGE_TAG
 
 
