--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,26 +30,36 @@ test-ml-service:
     - docker run -d --name ml-test -p 8000:8000 $IMAGE_TAG
     - sleep 10  # give it time to start
     - apk add --no-cache curl
-    - |
-      # Debug container info
-      echo "Container info:"
-      docker inspect ml-test
+    # - |
+    #   # Debug container info
+    #   echo "Container info:"
+    #   docker inspect ml-test
       
-      # Get container IP address
-      CONTAINER_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' ml-test)
-      echo "Container IP: $CONTAINER_IP"
+    #   # # Get container IP address
+    #   # CONTAINER_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' ml-test)
+    #   # echo "Container IP: $CONTAINER_IP"
       
-      # Test using both container IP and docker network
-      echo "Testing with container IP..."
-      curl --fail -v http://$CONTAINER_IP:8000/health || echo "IP-based test failed"
+    #   # # Test using both container IP and docker network
+    #   # echo "Testing with container IP..."
+    #   # curl --fail -v http://$CONTAINER_IP:8000/health || echo "IP-based test failed"
       
-      echo "Testing with Docker network..."
-      curl --fail -v http://ml-test:8000/health || echo "Hostname-based test failed"
+    #   echo "Testing with Docker network..."
+    #   curl --fail -v http://ml-test:8000/health || echo "Hostname-based test failed"
       
-      echo "Testing with Docker host..."
-      curl --fail -v http://docker:8000/health || echo "Docker host test failed"
+    #   # echo "Testing with Docker host..."
+    #   # curl --fail -v http://docker:8000/health || echo "Docker host test failed"
       
-      echo "Testing with localhost..."
-      curl --fail -v http://localhost:8000/health || echo "Localhost test failed" 
+    #   # echo "Testing with localhost..."
+    #   # curl --fail -v http://localhost:8000/health || echo "Localhost test failed" 
+    - for i in {1..20}; do
+      if curl --fail http://ml-test:8000/health; then
+        echo "Service is up!"
+        break
+      else
+        echo "Waiting for service to start..."
+        sleep 60
+      fi
+     done
+
     - docker logs ml-test
     - docker stop ml-test
