dockerfile ml_Service updated v42

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,11 @@ test-ml-service:
     #       sleep 60
     #     fi
     #   done
-    - if curl --fail http://ml-test:8000/health; then echo "Service is up!"
+    - if curl --fail http://ml-test:8000/health; then
+        echo "Service is up!"
+      else
+        echo "Service is down, retrying..."
+      fi
+
     - docker logs ml-test
     - docker stop ml-test
