--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,6 @@ services:
 #     - docker build -t $IMAGE_TAG -f ml_service/Dockerfile .
 #     - docker push $IMAGE_TAG
 
-
 test-ml-service:
   image: docker:latest
   stage: test
@@ -30,21 +29,17 @@ test-ml-service:
     - docker run -d --name ml-test -p 8000:8000 $IMAGE_TAG
     - sleep 10  # give it time to start
     - apk add --no-cache curl
-    # - |
-    #   for i in {1..20}; do
-        
-    #       break
-    #     else
-    #       echo "Waiting for service to start... (Attempt $i/20)"
-    #       sleep 60
-    #     fi
-    #   done
     - |
-      if curl --fail http://ml-test:8000/health; then
-        echo "Service is up!"
-      else
-        echo "Service is down, retrying..."
-      fi
+      # Retry loop to check if the service is up
+      for i in {1..20}; do
+        if curl --fail http://ml-test:8000/health; then
+          echo "Service is up!"
+          break
+        else
+          echo "Service is down, retrying... (Attempt $i/20)"
+          sleep 60
+        fi
+      done
 
     - docker logs ml-test
     - docker stop ml-test
