--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,12 +27,16 @@ test-ml-service:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker pull $IMAGE_TAG
     - docker run -d --name ml-test -p 8000:8000 $IMAGE_TAG
-    - sleep 10  # give it time to start
+    - sleep 10  # Give it time to start
     - apk add --no-cache curl
+    - |
+      # Retrieve the container's IP address
+      CONTAINER_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' ml-test)
+      echo "Container IP: $CONTAINER_IP"
     - |
       # Retry loop to check if the service is up
       for i in {1..20}; do
-        if curl --fail http://ml-test:8000/health; then
+        if curl --fail http://$CONTAINER_IP:8000/health; then
           echo "Service is up!"
           break
         else
@@ -40,6 +44,6 @@ test-ml-service:
           sleep 60
         fi
       done
-
     - docker logs ml-test
     - docker stop ml-test
+
